# foxyproxy-pattern-rs

./: .gitignore  Cargo.toml  README.md
src/: encoding.rs  foxyproxy.rs  main.rs  parser.rs
src/parser/: default.rs
